--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
         <!-- Photo Card 7 -->
         <div class="memory-card card-3" onclick="openMemoryPopup(7)">
-          <img src="assets/6.jpg" alt="Photo 7">
+          <img src="assets/6.png" alt="Photo 7">
           <h3>Detailed Shot</h3>
         </div>
 
