--- a/index.html
+++ b/index.html
@@ -94,13 +94,13 @@
 
         <!-- Photo Card 6 -->
         <div class="memory-card card-2" onclick="openMemoryPopup(6)">
-          <img src="assets/5.JPG" alt="Photo 6">
+          <img src="assets/5.jpg" alt="Photo 6">
           <h3>Urban Scene</h3>
         </div>
 
         <!-- Photo Card 7 -->
         <div class="memory-card card-3" onclick="openMemoryPopup(7)">
-          <img src="assets/6.png" alt="Photo 7">
+          <img src="assets/6.jpg" alt="Photo 7">
           <h3>Detailed Shot</h3>
         </div>
 
