--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
         <!-- Photo Card 6 -->
         <div class="memory-card card-2" onclick="openMemoryPopup(6)">
-          <img src="assets/5.JPG" alt="Photo 6">
+          <img src="assets/5.jpg" alt="Photo 6">
           <h3>Urban Scene</h3>
         </div>
 
